syntax = "proto3";
package com.chicago.dto;

option java_package = "com.chicago.dto";

message ApplicationConfig
{
    string application_name = 1;
    string instance_id = 2;
}

message KafkaConfig
{
    string servers = 1;
    repeated string consumer_topic = 2;
    string consumer_group = 3;
    string producer_topic = 4;
}

message ZooKeeperConfig
{
    string servers = 1;
}

message ShutdownConfig
{
    int32 shutdown_time = 1;
    int32 shutdown_minutes_after_eod = 2;
    bool register_grpc_service = 3;
}

message Component
{
    enum ComponentType
    {
        NONE = 0;
        EVENT_SCHEDULER = 1;
        EVENT_DISPATCHER = 2;
        ID_GEN_FACTORY = 3;
        GRPC_SERVER = 4;
        SYSTEM_STATE = 5;
        ASYNC_EXECUTOR = 6;
        JOB_MANAGER = 7;
    }
    string class_name = 1;
    ComponentType resource_type = 2;
}

message ComponentsConfig
{
    repeated Component components = 1;
}
